Fix extra space taken up when arrow disabled (#292)

--- a/assets/index.less
+++ b/assets/index.less
@@ -14,12 +14,6 @@
   color: #666;
   line-height: 28px;
 
-  &-allow-clear {
-    .@{selectPrefixCls}-selection--single .@{selectPrefixCls}-selection__rendered {
-      padding-right: 40px;
-    }
-  }
-
   ul, li {
     margin: 0;
     padding: 0;
@@ -118,7 +112,6 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       margin-left: 10px;
-      padding-right: 20px;
       line-height: 28px;
     }
 
